--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <!-- <link rel="stylesheet" media="all and (orientation:portrait)" href="portrait.css"> -->
   <!-- <link rel="stylesheet" media="all and (orientation:landscape)" href="landscape.css"> -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
