--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= image_tag product.picture_url(:thumb) if product.picture? %></td>
     <td class='product_description'><%= product.description %></td>
     <td class='product_code'><%= product.code %></td>
-    <td class='category_id'><%= product.category_id %></td>
+    <td class='category_id'><%= product.category.name %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td class='destroy_product'><%= link_to 'X', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
