--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,4 +19,7 @@
 
 </body>
 <%= javascript_include_tag "application" %>
+  <script type="text/javascript">
+    window.mySwipe = Swipe(document.getElementById('slider'));
+  </script>
 </html>
