--- a/app/views/products/duvet_sets.html.erb
+++ b/app/views/products/duvet_sets.html.erb
@@ -15,3 +15,11 @@
 </div>
 
 <%= render 'bottom_menu' %>
+
+<script type="text/javascript">
+var myScroll;
+function loaded() {
+  myScroll = new iScroll('wrapper');
+}
+document.addEventListener('DOMContentLoaded', loaded, false);
+</script>
