Added new menu items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,4 +19,11 @@
   <script type="text/javascript">
     window.mySwipe = Swipe(document.getElementById('slider'));
   </script>
+  <script type="text/javascript">
+var myScroll;
+function loaded() {
+  myScroll = new iScroll('wrapper');
+}
+document.addEventListener('DOMContentLoaded', loaded, false);
+</script>
 </html>
