--- a/app/views/products/_main_menu.html.erb
+++ b/app/views/products/_main_menu.html.erb
@@ -1,6 +1,13 @@
-<div id="main-menu">
-  <ul id="main-menu-list">
+<div id="main-menu-right">
+  <ul id="main-menu-list-right">
     <a href="/decorative-pillows"><li id='pillows'>PILLOWS</li></a>
+    <a href="/napkins"><li id='napkins'>NAPKINS</li></a>
+  </ul>
+</div>
+
+<div id="main-menu-left">
+  <ul id="main-menu-list-left">
     <a href="/duvet-sets"><li id='bedding'>BEDDING</li></a>
+    <a href="/baby-blankets"><li id='baby-blankets'>BABY BLANKETS</li></a>
   </ul>
 </div>
