--- a/app/views/products/baby_blankets.html.erb
+++ b/app/views/products/baby_blankets.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class='list' id='wrapper'>
-  <ul id='baby-blankets' class='item-list grid'>
+  <ul id='baby-blanket-list' class='item-list grid'>
 
   </ul>
 </div>
