--- a/app/views/products/napkins.html.erb
+++ b/app/views/products/napkins.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class='list' id='wrapper'>
-  <ul id='napkins' class='item-list grid'>
+  <ul id='napkin-list' class='item-list grid'>
 
   </ul>
 </div>
