Added items to bottom menu

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -144,7 +144,7 @@ h1 {
 
 #product-data {
   h2 {
-    width: 500px;
+    width: 600px;
     height: 65px;
     margin-left: 32px;
     font-weight: 300;
@@ -176,7 +176,7 @@ h1 {
 }
 
 #bottom-menu-div {
-  width: 480px;
+  width: 610px;
   height: 50px;
   clear: both;
   float: right;
@@ -194,7 +194,7 @@ h1 {
 
 #bottom-menu {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   a li {
     padding: 6px 15px;
     font-size: 1.7em;
