--- a/app/views/products/_bottom_menu.html.erb
+++ b/app/views/products/_bottom_menu.html.erb
@@ -3,6 +3,7 @@
     <a href='/'><li>Home</li></a>
     <a href='/decorative-pillows'><li>Pillows</li></a>
     <a href='/duvet-sets'><li>Duvet Sets</li></a>
-    <a href='/sheet-sets'><li>Sheet Sets</li></a>
+    <a href='/baby-blankets'><li>Baby Blankets</li></a>
+    <a href='/napkins'><li>Napkins</li></a>
   </ul>
 </div>
