--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -204,7 +204,8 @@ h1 {
 }
 
 .list {
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   width: 960px;
   height: 75%;
   margin-left: 34px;
