--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <script type="text/javascript">
+    var myScroll;
+    setTimeout(function () {
+      function loaded() {
+          myScroll = new iScroll('wrapper', {
+            checkDOMChanges: true
+          });
+          }
+        }, 200);
+    document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
+    window.addEventListener('load', loaded, false);
+  </script>
 </head>
 <body>
 
