--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -222,9 +222,10 @@ h1 {
 .code {
   width: 125px;
   height: 30px;
+  font-weight: 400;
   position: relative;
   float: right;
-  margin-right: 235px;
+  margin-right: 212px;
 }
 
 ///// SWIPE STYLES //////
