created menu container

--- a/app/views/products/_main_menu.html.erb
+++ b/app/views/products/_main_menu.html.erb
@@ -1,20 +1,22 @@
-<div id="main-menu-right">
-  <ul id="main-menu-list-right">
-    <li>
-      <ul id='sub-pillows'>
-        <li>PINTUCK</li>
-        <li>DTP</li>
-        <li>PATERN</li>
-      </ul>
-    </li>
-    <a href="/decorative-pillows"><li id='pillows'>PILLOWS</li></a>
-    <a href="/napkins"><li id='napkins'>NAPKINS</li></a>
-  </ul>
-</div>
+<div id='menu-container'>
+  <div id="main-menu-right">
+    <ul id="main-menu-list-right">
+      <li>
+        <ul id='sub-pillows'>
+          <li>PINTUCK</li>
+          <li>DTP</li>
+          <li>PATERN</li>
+        </ul>
+      </li>
+      <a href="/decorative-pillows"><li id='pillows'>PILLOWS</li></a>
+      <a href="/napkins"><li id='napkins'>NAPKINS</li></a>
+    </ul>
+  </div>
 
-<div id="main-menu-left">
-  <ul id="main-menu-list-left">
-    <a href="/duvet-sets"><li id='bedding'>BEDDING</li></a>
-    <a href="/baby-blankets"><li id='baby-blankets'>BABY BLANKETS</li></a>
-  </ul>
+  <div id="main-menu-left">
+    <ul id="main-menu-list-left">
+      <a href="/duvet-sets"><li id='bedding'>BEDDING</li></a>
+      <a href="/baby-blankets"><li id='baby-blankets'>BABY BLANKETS</li></a>
+    </ul>
+  </div>
 </div>
