--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -49,6 +49,11 @@ h1.category {
   margin-left: 80px;
 }
 
+#menu-container {
+  width: 100%;
+  height: 215px;
+}
+
 #main-menu-right {
   width: 430px;
   position: relative;
