Added sub items for pillows menu

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -96,6 +96,12 @@ ul#main-menu-list-left {
   }
 }
 
+#sub-items {
+  position: absolute;
+  width: 378px;
+  top: -200px;
+}
+
 #slider {
   width: 960px;
   height: 400px;
