--- a/app/views/products/_main_menu.html.erb
+++ b/app/views/products/_main_menu.html.erb
@@ -1,7 +1,7 @@
 <div id='menu-container'>
   <div id="main-menu-right">
     <ul id="main-menu-list-right">
-      <li>
+      <li id='sub-items'>
         <ul id='sub-pillows'>
           <li>PINTUCK</li>
           <li>DTP</li>
