--- a/app/views/products/_main_menu.html.erb
+++ b/app/views/products/_main_menu.html.erb
@@ -1,19 +1,22 @@
 <div id='menu-container'>
-  <div id="main-menu-right">
-    <ul id="main-menu-list-right">
-      <li id='sub-items'>
+  <div id="main-menu-right" class="gray-menu">
+    <div id='slide-out-pos'>
+      <div id='sub-items' class="gray-menu">
         <ul id='sub-pillows'>
+          <a href="/decorative-pillows"><li>ALL</li></a>
           <li>PINTUCK</li>
           <li>DTP</li>
           <li>PATERN</li>
         </ul>
-      </li>
-      <a href="/decorative-pillows"><li id='pillows'>PILLOWS</li></a>
+      </div>
+    </div>
+    <ul id="main-menu-list-right">
+      <a href='#'><li id='pillows'>PILLOWS</li></a>
       <a href="/napkins"><li id='napkins'>NAPKINS</li></a>
     </ul>
   </div>
 
-  <div id="main-menu-left">
+  <div id="main-menu-left" class="gray-menu">
     <ul id="main-menu-list-left">
       <a href="/duvet-sets"><li id='bedding'>BEDDING</li></a>
       <a href="/baby-blankets"><li id='baby-blankets'>BABY BLANKETS</li></a>
