--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -52,6 +52,7 @@ h1.category {
 #menu-container {
   width: 100%;
   height: 215px;
+  position: relative;
 }
 
 #main-menu-right {
@@ -67,7 +68,7 @@ h1.category {
   float: left;
 }
 
-ul#main-menu-list-right {
+.gray-menu ul {
   list-style: none;
   padding: 0;
   li {
@@ -81,26 +82,24 @@ ul#main-menu-list-right {
   }
 }
 
+
 ul#main-menu-list-left {
-  list-style: none;
-  padding: 0;
   li {
     text-align: right;
-    color: #FFF;
-    font-size: 1.8em;
-    font-family: $Roboto;
-    font-weight: 300;
-    padding: 26px;
-    background-color: $Gray;
-    margin-bottom: 5px;
   }
+}
+
+#slide-out-pos {
+  position: relative;
+  top: 25px;
 }
 
 #sub-items {
   position: absolute;
   width: 378px;
-  top: -200px;
+  bottom: 0;
 }
+
 
 #slider {
   width: 960px;
@@ -108,10 +107,6 @@ ul#main-menu-list-left {
   margin: auto;
 }
 
-ul#sub-pillows li {
-  list-style: none;
-  padding: 15px;
-}
 
 //////  Product Show Page ////////
 
