--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -96,8 +96,9 @@ ul#main-menu-list-left {
 
 #sub-items {
   position: absolute;
-  width: 378px;
+  width: 405px;
   bottom: 0;
+  right: 0px;
 }
 
 
