add subcat field

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -29,8 +29,13 @@
   </div>
 
   <div class="field">
-    Category Id:<br />
+    Category:<br />
     <%= f.select :category_id, @options %>
+  </div>
+
+  <div class="field">
+    SubCategory:<br />
+    <%= f.select :subcategory_id, @options %>
   </div>
 
   <div class="actions">
