--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -30,12 +30,12 @@
 
   <div class="field">
     Category:<br />
-    <%= f.select :category_id, @options %>
+    <%= f.select :category_id, @cat %>
   </div>
 
   <div class="field">
     SubCategory:<br />
-    <%= f.select :subcategory_id, @options %>
+    <%= f.select :subcategory_id, @subcat %>
   </div>
 
   <div class="actions">
