css for admin menu

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -14,6 +14,13 @@ a {
   }
 }
 
+/*#admin-menu {
+  ul {
+    width: 500px;
+    list-style: none;
+    padding-left: 10px;
+  }
+}*/
 
 ////// Front Page /////////
 
