--- a/app/views/products/decorative_pillows.html.erb
+++ b/app/views/products/decorative_pillows.html.erb
@@ -14,7 +14,7 @@
   </ul>
 </div>
 
-// <script type="text/javascript">
+<script type="text/javascript">
 //   setTimeout(function() {
 //     myAppShot = new iScroll('wrapper', {
 //         checkDOMChanges: true
