--- a/app/views/products/_admin_menu.html.erb
+++ b/app/views/products/_admin_menu.html.erb
@@ -1,7 +1,9 @@
 <div id="admin-menu">
 	<ul>
+		<li><a href="/">Home</a></li>
 		<li><a href="/products">Products</a></li>
 		<li><a href="/categories">Categories</a></li>
 		<li><a href="/subcategories">Subcategoreis</a></li>
+		<li><a href="/products/new">New Product</a></li>
 	</ul>
 </div>
