--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,7 @@
     <th>Description</th>
     <th>Code</th>
     <th>Catgr</th>
+    <th>SubCat</th>
     <th></th>
     <th></th>
   </tr>
@@ -23,6 +24,7 @@
     <td class='product_description'><%= product.description %></td>
     <td class='product_code'><%= product.code %></td>
     <td class='category_id'><%= product.category.name %></td>
+    <td class='subcat'><%= product.subcategory.name %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td class='destroy_product'><%= link_to 'X', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
