--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,7 +24,11 @@
     <td class='product_description'><%= product.description %></td>
     <td class='product_code'><%= product.code %></td>
     <td class='category_id'><%= product.category.name %></td>
-    <td class='subcat'><%= product.subcategory.name %></td>
+    <td class='subcat'>
+      <% if product.subcategory %>
+        <%= product.subcategory.name %>
+      <% end %>
+    </td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td class='destroy_product'><%= link_to 'X', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
