--- a/app/views/products/_main_menu.html.erb
+++ b/app/views/products/_main_menu.html.erb
@@ -3,15 +3,15 @@
     <div id='slide-out-pos'>
       <div id='sub-items' class="gray-menu">
         <ul id='sub-pillows'>
-          <a href="/decorative-pillows"><li>ALL</li></a>
+          <!-- <a href="/decorative-pillows"><li>ALL</li></a>
           <% @pillow_subcat.each do |s| %>
             <li><%= s.name %></li>
-          <% end %>
+          <% end %> -->
         </ul>
       </div>
     </div>
     <ul id="main-menu-list-right">
-      <a href='#'><li id='pillows'>PILLOWS</li></a>
+      <a href='/pillows'><li id='pillows'>PILLOWS</li></a>
       <a href="/napkins"><li id='napkins'>NAPKINS</li></a>
     </ul>
   </div>
