--- a/app/views/products/_bottom_menu.html.erb
+++ b/app/views/products/_bottom_menu.html.erb
@@ -1,7 +1,7 @@
 <div id='bottom-menu-div'>
   <ul id='bottom-menu'>
     <a href='/'><li>Home</li></a>
-    <a href='/decorative-pillows'><li>Pillows</li></a>
+    <a href='/pillows'><li>Pillows</li></a>
     <a href='/duvet-sets'><li>Duvet Sets</li></a>
     <a href='/baby-blankets'><li>Baby Blankets</li></a>
     <a href='/napkins'><li>Napkins</li></a>
