--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -67,6 +67,12 @@ h1.category {
   float: left;
 }
 
+#wrapper {
+  ul {
+    overflow: auto;
+  }
+}
+
 .gray-menu ul {
   list-style: none;
   padding: 0;
